# luamssql

./: CMakeLists.txt  README.md
luasqlserver/: luasqlserver.vcxproj
win_luasqlserver/: README.md  sqlserver.cpp  sqlserver.def  sqlserver.h
win_testx64/: lua51.lib  testdb.sql  testmssql.lua
xnux_luasqlserver/: Makefile  README.md  tdssqlserver.cpp  tdssqlserver.h  tdssqlserver.h.gch
